[package]
name = "neurolend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# For reading the indexer output
ethers = "2.0"

[[bin]]
name = "api_server"
path = "src/simple_main.rs"

[[bin]]
name = "subgraph_api"
path = "src/subgraph_main.rs"
