[package]
name = "neurolend_indexer"
version = "0.1.0"
edition = "2021"
default-run = "neurolend_indexer"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Reuse your existing ABI definitions
ethabi = "17"
num-bigint = "0.4"
num-traits = "0.2.15"

[[bin]]
name = "neurolend_indexer"
path = "src/main.rs"

[[bin]]
name = "test_connection"
path = "src/bin/test_connection.rs"
